--- a/back-end/docker-compose.yml
+++ b/back-end/docker-compose.yml
@@ -1,16 +1,24 @@
 version: "3"
 
 services:
-  client:
-    build: ./
-    command: tail -f /dev/null
+  laravel:
+    build: .
     ports:
       - 5500:8000
     volumes:
       - ./:/app
-    entrypoint: ./init.sh
 
-networks:
-  default:
-    external:
-      name: jc-bot
+  db:
+    image: mysql:8
+    restart: always
+    environment:
+      MYSQL_DATABASE: 'laravel_test'
+      MYSQL_USER: 'test_user'
+      MYSQL_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: 'password'
+    ports:
+      - '3306:3306'
+    expose:
+      - '3306'
+    volumes:
+      - /my-db:/var/lib/mysql    
