--- a/back-end/docker-compose.yml
+++ b/back-end/docker-compose.yml
@@ -2,11 +2,15 @@ version: "3"
 
 services:
   laravel:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - 5500:8000
-    volumes:
-      - ./:/app
+      - 8000:8000
+    depends_on:
+      - db
+    # networks:
+    #   - mynetwork
 
   db:
     image: mysql:8
@@ -16,9 +20,12 @@ services:
       MYSQL_USER: 'test_user'
       MYSQL_PASSWORD: 'password'
       MYSQL_ROOT_PASSWORD: 'password'
-    ports:
-      - '3306:3306'
-    expose:
-      - '3306'
     volumes:
-      - /my-db:/var/lib/mysql    
+      - ./my-db:/var/lib/mysql
+    # networks:
+    #   - mynetwork
+
+# networks:
+  # default:
+    # external:
+      # true
