--- a/back-end/composer.json
+++ b/back-end/composer.json
@@ -8,18 +8,18 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
-        "barryvdh/laravel-cors": "^0.11.4",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.2",
-        "laravel/tinker": "^1.0"
+        "php": "7.2",
+        "barryvdh/laravel-cors": "0.11.4",
+        "fideloper/proxy": "4.0",
+        "laravel/framework": "6.2",
+        "laravel/tinker": "1.0"
     },
     "require-dev": {
-        "facade/ignition": "^1.4",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "facade/ignition": "1.4",
+        "fzaninotto/faker": "1.4",
+        "mockery/mockery": "1.0",
+        "nunomaduro/collision": "3.0",
+        "phpunit/phpunit": "8.0"
     },
     "config": {
         "optimize-autoloader": true,
